<resources>
    <string name="app_name">Talentspear University</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="content_text">This is some sample text.
    Here, You can view whatever you want just by closing application,
    and opening the browser. I request you to stay in this application as much as possible.
    This is some sample text.
    Here, You can view whatever you want just by closing application,
    and opening the browser. I request you to stay in this application as much as possible.</string>
    <string name="clock_icon">&#xf017;</string>
    <string name="cal_icon">&#xf073;</string>
    <string name="down_icon">&#xf0ab;</string>
    <string name="share_icon">&#xf1e0;</string>
    <string name="post_icon">&#xf15c;</string>
    <string name="eye_icon">&#xf06e;</string>
    <string name="pdf_icon">&#xf1c1;</string>
    <string name="image_icon">&#xf1c5;</string>
    <string name="plus_icon">&#xf067;</string>
    <string name="user_icon">&#xf007;</string>
    <string name="briefcase_icon">&#xf0b1;</string>
    <string name="graduate_icon">&#xf19d;</string>
    <string name="mobile_icon">&#xf10b;</string>
    <string name="mail_icon">&#xf0e0;</string>
    <string name="book_icon">&#xf02d;</string>
    <string name="doc_icon">&#xf15c;</string>
    <string name="add_contact_icon">&#xf234;</string>
    <string name="whatsapp_icon">&#xf232;</string>
    <string name="facebook_icon">&#xf230;</string>
    <string name="star_icon_empty">&#xf006;</string>
    <string name="close_icon">&#xf00d;</string>
    <string name="star_icon_filled">&#xf005;</string>
    <string name="edited_icon_pencil">&#xf040;</string>
    <string name="edited_icon_pencil_sgpa">&#xf040; Edit</string>
    <string name="reload_icon">&#xf040;</string>
    <string name="post_icon_text">&#xf15c; Loading New Posts..</string>
    <string name="title_activity_pdf_view">PdfView</string>
    <string name="loading_post_text">&#xf0ec; Loading&#8230;</string>
    <string name="loading_contacts_text">&#xf0ec; Loading Contacts&#8230;</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="title_activity_full_screen_post">FullScreenPost</string>
    <string name="name">Name</string>
    <string name="usn">USN</string>
    <string name="gcm_defaultSenderId">506324117385</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_manage_bunks">ManageBunks</string>
    <string name="add_icon">&#xf067;</string>
    <string name="show_more">&#xf103;</string>
    <string name="show_less">&#xf102;</string>
    <string name="edit_marks">&#xf044; Edit</string>
    <string name="delete_marks">&#xf00d; Delete</string>
    <string name="lock_marks">&#xf023; Lock</string>
    <string name="unlock_marks">&#xf09c; Unlock</string>
    <string name="title_activity_sgpa_calculator">SGPA Predictor</string>
    <string-array name="credits">
        <item>5.0</item>
        <item>4.0</item>
        <item>3.0</item>
        <item>2.0</item>
        <item>1.5</item>
        <item>1.0</item>
    </string-array>
    <string name="title_activity_subject_attendance">subjectAttendance</string>
</resources>
