<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/full_post_container">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="This is some title for the post"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:gravity="center"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:textColor="@color/primaryColorDark"
        android:id="@+id/full_post_title"
        android:layout_marginTop="10dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/primaryColorDark"
        android:layout_below="@+id/full_post_title"
        android:layout_marginTop="4dp"
        android:id="@+id/full_post_hr" />
<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="none"
    android:layout_marginTop="10dp"
    android:overScrollMode="never"
    android:layout_marginBottom="5dp"
    android:layout_above="@+id/full_content_post_attach"
    android:id="@+id/full_post_content_scroller"
    android:layout_centerHorizontal="true"
    android:layout_below="@+id/full_post_hr">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/content_text"
        android:paddingTop="10dp"
        android:textSize="20sp"
        android:paddingBottom="10dp"
        android:gravity="left"
        android:autoLink="web"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:textColor="#607D8B"
        android:id="@+id/full_post_content"
         />
</ScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:padding="10dp"
        android:background="@color/primaryColor"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:lines="1"
        android:maxLength="20"
        android:layout_above="@+id/bottom_options_container"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_centerHorizontal="true"
        android:text="@string/down_icon"
        android:id="@+id/full_content_post_attach"
        android:ellipsize="end" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:weightSum="90"
        android:id="@+id/bottom_options_container"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="4dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:padding="10dp"
            android:lines="1"
            android:textColor="@color/primaryColorDark"
            android:textSize="17sp"
            android:layout_gravity="start"
            android:gravity="start"
            android:text="@string/cal_icon"
            android:id="@+id/full_content_post_date"
            android:ellipsize="end" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="30"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:paddingBottom="5dp"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:paddingRight="10dp"
                android:paddingEnd="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:textSize="23sp"
                android:lines="1"
                android:textColor="@color/primaryColorDark"
                android:text="@string/whatsapp_icon"
                android:id="@+id/full_content_post_whatsapp"
                android:ellipsize="end" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:paddingRight="10dp"
                android:paddingEnd="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:textSize="23sp"
                android:lines="1"
                android:textColor="@color/primaryColorDark"
                android:text="@string/share_icon"
                android:id="@+id/full_content_post_share"
                android:ellipsize="end" />
        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="30"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:padding="10dp"
            android:textSize="17sp"
            android:lines="1"
            android:textColor="@color/primaryColorDark"
            android:layout_gravity="end"
            android:gravity="end"
            android:text="@string/clock_icon"
            android:id="@+id/full_content_post_time"
            android:ellipsize="end" />


    </LinearLayout>
</RelativeLayout>