<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/cardMarginVertical"
        android:layout_marginLeft="@dimen/cardMarginHorizontal"
        android:layout_marginRight="@dimen/cardMarginHorizontal"
        android:layout_marginTop="@dimen/cardMarginVertical"
        android:background="@color/white"
        app:cardCornerRadius="2dp"
        app:cardElevation="2dp"
        app:cardPreventCornerOverlap="false"
        app:contentPadding="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/MarksDetailsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5">
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@color/primaryColorDark"
                    android:layout_weight="2">
                    <TextView
                        android:id="@+id/listSubName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:padding="7dp"
                        android:maxLines="1"
                        android:text="subject"
                        android:textColor="@color/white"
                        android:textSize="24sp" />
                    <TextView
                        android:id="@+id/showMoreOption"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top|end"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/show_more"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/captionCie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:ellipsize="end"
                        android:gravity="center_horizontal"
                        android:text="CIE"
                        android:background="@color/primaryColor"
                        android:textColor="@color/white"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/ListCieMarks"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/captionCie"
                        android:gravity="center_horizontal"
                        android:text="50"
                        android:textColor="@color/primaryColor"
                        android:textSize="24sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/captionSee"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:ellipsize="end"
                        android:gravity="center_horizontal"
                        android:background="@color/primaryColor"
                        android:text="SEE"
                        android:textColor="@color/white"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/ListSeeMarks"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/captionSee"
                        android:gravity="center_horizontal"
                        android:text="50"
                        android:textColor="@color/primaryColor"
                        android:textSize="24sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/captionGrade"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:ellipsize="end"
                        android:gravity="center_horizontal"
                        android:text="Grade"
                        android:background="@color/primaryColor"
                        android:textColor="@color/white"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/ListGrade"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/captionGrade"
                        android:gravity="center_horizontal"
                        android:text="S"
                        android:textColor="@color/primaryColor"
                        android:textSize="24sp" />
                </RelativeLayout>
            </LinearLayout>
            <RelativeLayout
                android:id="@+id/optionsDrawer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/MarksDetailsLayout"
                android:visibility="gone">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@drawable/sgpa_dropshadow"
                    android:id="@+id/sgpa_item_shadow"/>

                <RelativeLayout
                    android:id="@+id/optionsLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_below="@id/sgpa_item_shadow"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/edit_marks"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_marginEnd="20dp"
                        android:gravity="center_horizontal"
                        android:text="@string/edit_marks"
                        android:textColor="@color/primaryColorDark"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/delete_marks"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_toRightOf="@+id/edit_marks"
                        android:layout_toEndOf="@+id/edit_marks"
                        android:gravity="center_horizontal"
                        android:text="@string/delete_marks"
                        android:textColor="#aaff0000"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/lock_marks"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_toRightOf="@id/delete_marks"
                        android:layout_toEndOf="@id/delete_marks"
                        android:text="@string/lock_marks"
                        android:textColor="@color/primaryColorDark"
                        android:textSize="20sp" />
                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>